--- a/ex02-ano-bissexto.html
+++ b/ex02-ano-bissexto.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <script>
 
-    let ano = parseInt(prompt('Informe o ano: '))
+    let ano = parseInt(prompt('Informe um ano maior ou igual 1582: '))
 
         if(isNaN(ano) || ano < 1582) {
            alert('ERRO! O ano informado não é válido!') 
