--- a/ex04-dias-mes.html
+++ b/ex04-dias-mes.html
@@ -64,10 +64,8 @@
               alert('O mês informado (Dezembro) possui 31 dias')
               break
 
-         
-
-
-
+              default:
+                  alert('ERRO: Número informado inválido')
 
 
 
