Ex placa mercosul

--- a/ex05-placa-mercosul.html
+++ b/ex05-placa-mercosul.html
@@ -81,7 +81,7 @@
                    
               }
 
-          } while (isNaN(num) || (num) <= 9)
+          }while (isNaN(num) || num >= 10)
               
           if(result !== undefined) {
             document.write(`A conversão do ${num} é igual a ${result}`)
