--- a/ex09-for-reverso.html
+++ b/ex09-for-reverso.html
@@ -17,7 +17,10 @@
 
    let num
    
-   num =parseInt(prompt('Informe um número maior que 1: '))
+   do{
+    num =parseInt(prompt('Informe um número maior que 1: '))  
+   } while(isNaN(num) || num <= 1)
+
    
    let fat = 1
    for(let i = 1; i <= num; i++){
