(04/10) Finalização do formulário de saudação

--- a/10-DOM.html
+++ b/10-DOM.html
@@ -42,7 +42,7 @@
 
         // Capturando um elemento pelo id - existem duas formas
         
-        let itemMg = document.getElementById('#mg') // Forma clássica
+        let itemMg = document.getElementById('mg') // Forma clássica
         itemMg.style.color = 'green' 
 
         // Forma moderna - note que é nessário colocar o # antes do id
